Modified the structure file

--- a/index.html
+++ b/index.html
@@ -58,6 +58,175 @@
             </div>
             <a href="#articles"><i class="fa-solid fa-angles-down"></i></a>
         </section>
+
+        <!-- Articles Section -->
+        <section class="articles" id="articles">
+            <article class="container">
+                <span class="main-title">Articles</span>
+                <div class="grid-columns--4">
+                    <div class="article">
+                        <img src="images/cat-01.jpg" alt="">
+                        <div class="article-info">
+                            <h2>Test Title</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
+                        </div>
+                        <div class="read-more">
+                            <a href="#">Read More</a>
+                            <i class="fa-solid fa-right-long"></i>
+                        </div>
+                    </div>
+                    <div class="article">
+                        <img src="images/cat-02.jpg" alt="">
+                        <div class="article-info">
+                            <h2>Test Title</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
+                        </div>
+                        <div class="read-more">
+                            <a href="#">Read More</a>
+                            <i class="fa-solid fa-right-long"></i>
+                        </div>
+                    </div>
+                    <div class="article">
+                        <img src="images/cat-03.jpg" alt="">
+                        <div class="article-info">
+                            <h2>Test Title</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
+                        </div>
+                        <div class="read-more">
+                            <a href="#">Read More</a>
+                            <i class="fa-solid fa-right-long"></i>
+                        </div>
+                    </div>
+                    <div class="article">
+                        <img src="images/cat-04.jpg" alt="">
+                        <div class="article-info">
+                            <h2>Test Title</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
+                        </div>
+                        <div class="read-more">
+                            <a href="#">Read More</a>
+                            <i class="fa-solid fa-right-long"></i>
+                        </div>
+                    </div>
+                    <div class="article">
+                        <img src="images/cat-05.jpg" alt="">
+                        <div class="article-info">
+                            <h2>Test Title</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
+                        </div>
+                        <div class="read-more">
+                            <a href="#">Read More</a>
+                            <i class="fa-solid fa-right-long"></i>
+                        </div>
+                    </div>
+                    <div class="article">
+                        <img src="images/cat-06.jpg" alt="">
+                        <div class="article-info">
+                            <h2>Test Title</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
+                        </div>
+                        <div class="read-more">
+                            <a href="#">Read More</a>
+                            <i class="fa-solid fa-right-long"></i>
+                        </div>
+                    </div>
+                    <div class="article">
+                        <img src="images/cat-07.jpg" alt="">
+                        <div class="article-info">
+                            <h2>Test Title</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
+                        </div>
+                        <div class="read-more">
+                            <a href="#">Read More</a>
+                            <i class="fa-solid fa-right-long"></i>
+                        </div>
+                    </div>
+                    <div class="article">
+                        <img src="images/cat-08.jpg" alt="">
+                        <div class="article-info">
+                            <h2>Test Title</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit</p>
+                        </div>
+                        <div class="read-more">
+                            <a href="#">Read More</a>
+                            <i class="fa-solid fa-right-long"></i>
+                        </div>
+                    </div>
+                </div>
+            </article>
+        </section>
+
+        <!-- Gallary Section -->
+        <section class="gallary" id="gallary">
+            <article class="container">
+                <span class="main-title">Gallary</span>
+                <div class="grid-columns--3">
+                    <div class="box">
+                        <div>
+                            <img src="images/gallery-01.png" alt="">
+                        </div>
+                    </div>
+                    <div class="box">
+                        <div>
+                            <img src="images/gallery-02.png" alt="">
+                        </div>
+                    </div>
+                    <div class="box">
+                        <div>
+                            <img src="images/gallery-03.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="box">
+                        <div>
+                            <img src="images/gallery-04.png" alt="">
+                        </div>
+                    </div>
+                    <div class="box">
+                        <div>
+                            <img src="images/gallery-05.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="box">
+                        <div>
+                            <img src="images/gallery-01.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </article>
+        </section>
+
+        <!-- Features Section -->
+        <section class="features" id="features" style="padding: var(--sectionPadding);">
+            <article class="container">
+                <span class="main-title">Features</span>
+                <div class="grid-columns--3">
+                    <div class="feature red">
+                        <div class="feature-img">
+                            <img src="images/features-01.jpg" alt="">
+                        </div>
+                        <h1>Quality</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit harum hic veniam eligendi minima</p>
+                        <a href="#">More</a>
+                    </div>
+                    <div class="feature green">
+                        <div class="feature-img">
+                            <img src="images/features-02.jpg" alt="">
+                        </div>
+                        <h1>Time</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit harum hic veniam eligendi minima</p>
+                        <a href="#">More</a>
+                    </div>
+                    <div class="feature blue">
+                        <div class="feature-img">
+                            <img src="images/features-03.jpg" alt="">
+                        </div>
+                        <h1>Passion</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit harum hic veniam eligendi minima</p>
+                        <a href="#">More</a>
+                    </div>
+                </div>
+            </article>
+        </section>
         <script src="main.js"></script>
     </body>
 </html>
