Modified the structure file

--- a/index.html
+++ b/index.html
@@ -227,6 +227,343 @@
                 </div>
             </article>
         </section>
+
+        <!-- Testimonials Section -->
+        <section class="testimonials" id="testimonials" style="padding: var(--sectionPadding); background-color: var(--subColor2);">
+            <article class="container">
+                <span class="main-title">Testimonials</span>
+                <div class="grid-columns--3">
+                    <div class="testimonial">
+                        <img src="images/avatar-01.png" alt="">
+                        <h2>Mohamed Salah</h2>
+                        <span>Front-end developer</span>
+                        <div class="stars">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                        </div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et reiciendis voluptatum, amet est natus quaerat ducimus</p>
+                    </div>
+                    <div class="testimonial">
+                        <img src="images/avatar-02.png" alt="">
+                        <h2>Mostafa Mohamed</h2>
+                        <span>Back-end developer</span>
+                        <div class="stars">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-regular fa-star" style="color: var(--subColor);"></i>
+                        </div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et reiciendis voluptatum, amet est natus quaerat ducimus</p>
+                    </div>
+                    <div class="testimonial">
+                        <img src="images/avatar-03.png" alt="">
+                        <h2>Mohamed Elshammy</h2>
+                        <span>Android developer</span>
+                        <div class="stars">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-regular fa-star" style="color: var(--subColor);"></i>
+                            <i class="fa-regular fa-star" style="color: var(--subColor);"></i>
+                            <i class="fa-regular fa-star" style="color: var(--subColor);"></i>
+                        </div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et reiciendis voluptatum, amet est natus quaerat ducimus</p>
+                    </div>
+                    <div class="testimonial">
+                        <img src="images/avatar-04.png" alt="">
+                        <h2>Kamal Ibrahim</h2>
+                        <span>IOS developer</span>
+                        <div class="stars">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-regular fa-star" style="color: var(--subColor);"></i>
+                            <i class="fa-regular fa-star" style="color: var(--subColor);"></i>
+                        </div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et reiciendis voluptatum, amet est natus quaerat ducimus</p>
+                    </div>
+                    <div class="testimonial">
+                        <img src="images/avatar-05.png" alt="">
+                        <h2>Mohamed Kamal</h2>
+                        <span>Flutter developer</span>
+                        <div class="stars">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-regular fa-star" style="color: var(--subColor);"></i>
+                        </div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et reiciendis voluptatum, amet est natus quaerat ducimus</p>
+                    </div>
+                    <div class="testimonial">
+                        <img src="images/avatar-06.png" alt="">
+                        <h2>Ahmed Mahmoud</h2>
+                        <span>React developer</span>
+                        <div class="stars">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                        </div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores et reiciendis voluptatum, amet est natus quaerat ducimus</p>
+                    </div>
+                </div>
+            </article>
+        </section>
+
+        <!-- Team-members Section -->
+        <section class="team-members" id="team-members"  style="padding: var(--sectionPadding);">
+            <article class="container">
+                <span class="main-title">Team Members</span>
+                <div class="grid-columns--3">
+                    <div class="member">
+                        <div class="member--img--social">
+                            <img src="images/team-01.jpg" alt="">
+                            <div class="member-social">
+                                <a href="https://www.facebook.com"><i class="fa-brands fa-facebook-f"></i></a>
+                                <a href="https://www.twitter.com"><i class="fa-brands fa-twitter"></i></a>
+                                <a href="https://www.linkedin.com"><i class="fa-brands fa-linkedin-in"></i></a>
+                                <a href="https://www.youtube.com"><i class="fa-brands fa-youtube"></i></a>
+                            </div>
+                        </div>
+                        <div class="member-info">
+                            <h2>Name</h2>
+                            <span>Simple Short Description</span>
+                        </div>
+                    </div>
+                    <div class="member">
+                        <div class="member--img--social">
+                            <img src="images/team-02.jpg" alt="">
+                            <div class="member-social">
+                                <a href="https://www.facebook.com"><i class="fa-brands fa-facebook-f"></i></a>
+                                <a href="https://www.twitter.com"><i class="fa-brands fa-twitter"></i></a>
+                                <a href="https://www.linkedin.com"><i class="fa-brands fa-linkedin-in"></i></a>
+                                <a href="https://www.youtube.com"><i class="fa-brands fa-youtube"></i></a>
+                            </div>
+                        </div>
+                        <div class="member-info">
+                            <h2>Name</h2>
+                            <span>Simple Short Description</span>
+                        </div>
+                    </div>
+                    <div class="member">
+                        <div class="member--img--social">
+                            <img src="images/team-03.jpg" alt="">
+                            <div class="member-social">
+                                <a href="https://www.facebook.com"><i class="fa-brands fa-facebook-f"></i></a>
+                                <a href="https://www.twitter.com"><i class="fa-brands fa-twitter"></i></a>
+                                <a href="https://www.linkedin.com"><i class="fa-brands fa-linkedin-in"></i></a>
+                                <a href="https://www.youtube.com"><i class="fa-brands fa-youtube"></i></a>
+                            </div>
+                        </div>
+                        <div class="member-info">
+                            <h2>Name</h2>
+                            <span>Simple Short Description</span>
+                        </div>
+                    </div>
+                    <div class="member">
+                        <div class="member--img--social">
+                            <img src="images/team-04.jpg" alt="">
+                            <div class="member-social">
+                                <a href="https://www.facebook.com"><i class="fa-brands fa-facebook-f"></i></a>
+                                <a href="https://www.twitter.com"><i class="fa-brands fa-twitter"></i></a>
+                                <a href="https://www.linkedin.com"><i class="fa-brands fa-linkedin-in"></i></a>
+                                <a href="https://www.youtube.com"><i class="fa-brands fa-youtube"></i></a>
+                            </div>
+                        </div>
+                        <div class="member-info">
+                            <h2>Name</h2>
+                            <span>Simple Short Description</span>
+                        </div>
+                    </div>
+                    <div class="member">
+                        <div class="member--img--social">
+                            <img src="images/team-05.png" alt="">
+                            <div class="member-social">
+                                <a href="https://www.facebook.com"><i class="fa-brands fa-facebook-f"></i></a>
+                                <a href="https://www.twitter.com"><i class="fa-brands fa-twitter"></i></a>
+                                <a href="https://www.linkedin.com"><i class="fa-brands fa-linkedin-in"></i></a>
+                                <a href="https://www.youtube.com"><i class="fa-brands fa-youtube"></i></a>
+                            </div>
+                        </div>
+                        <div class="member-info">
+                            <h2>Name</h2>
+                            <span>Simple Short Description</span>
+                        </div>
+                    </div>
+                    <div class="member">
+                        <div class="member--img--social">
+                            <img src="images/team-06.png" alt="">
+                            <div class="member-social">
+                                <a href="https://www.facebook.com"><i class="fa-brands fa-facebook-f"></i></a>
+                                <a href="https://www.twitter.com"><i class="fa-brands fa-twitter"></i></a>
+                                <a href="https://www.linkedin.com"><i class="fa-brands fa-linkedin-in"></i></a>
+                                <a href="https://www.youtube.com"><i class="fa-brands fa-youtube"></i></a>
+                            </div>
+                        </div>
+                        <div class="member-info">
+                            <h2>Name</h2>
+                            <span>Simple Short Description</span>
+                        </div>
+                    </div>
+                    <div class="member">
+                        <div class="member--img--social">
+                            <img src="images/team-07.jpg" alt="">
+                            <div class="member-social">
+                                <a href="https://www.facebook.com"><i class="fa-brands fa-facebook-f"></i></a>
+                                <a href="https://www.twitter.com"><i class="fa-brands fa-twitter"></i></a>
+                                <a href="https://www.linkedin.com"><i class="fa-brands fa-linkedin-in"></i></a>
+                                <a href="https://www.youtube.com"><i class="fa-brands fa-youtube"></i></a>
+                            </div>
+                        </div>
+                        <div class="member-info">
+                            <h2>Name</h2>
+                            <span>Simple Short Description</span>
+                        </div>
+                    </div>
+                    <div class="member">
+                        <div class="member--img--social">
+                            <img src="images/team-08.jpg" alt="">
+                            <div class="member-social">
+                                <a href="https://www.facebook.com"><i class="fa-brands fa-facebook-f"></i></a>
+                                <a href="https://www.twitter.com"><i class="fa-brands fa-twitter"></i></a>
+                                <a href="https://www.linkedin.com"><i class="fa-brands fa-linkedin-in"></i></a>
+                                <a href="https://www.youtube.com"><i class="fa-brands fa-youtube"></i></a>
+                            </div>
+                        </div>
+                        <div class="member-info">
+                            <h2>Name</h2>
+                            <span>Simple Short Description</span>
+                        </div>
+                    </div>
+                </div>
+            </article>
+        </section>
+
+        <!-- Services Section -->
+        <section class="services" id="services" style="padding: var(--sectionPadding); background-color: var(--subColor2);">
+            <article class="container">
+                <span class="main-title">Services</span>
+                <div class="grid-columns--3">
+                    <div class="service">
+                        <i class="fa-solid fa-user-shield"></i>
+                        <h2>Security</h2>
+                        <div class="service-info">
+                            <a href="#">Details</a>
+                        </div>
+                    </div>
+                    <div class="service">
+                        <i class="fa-solid fa-screwdriver-wrench"></i>
+                        <h2>Fixing Issues</h2>
+                        <div class="service-info">
+                            <a href="#">Details</a>
+                        </div>
+                    </div>
+                    <div class="service">
+                        <i class="fa-solid fa-map-location-dot"></i>
+                        <h2>Location</h2>
+                        <div class="service-info">
+                            <a href="#">Details</a>
+                        </div>
+                    </div>
+                    <div class="service">
+                        <i class="fa-solid fa-laptop-code"></i>
+                        <h2>Coding</h2>
+                        <div class="service-info">
+                            <a href="#">Details</a>
+                        </div>
+                    </div>
+                    <div class="service">
+                        <i class="fa-solid fa-palette"></i>
+                        <h2>Design</h2>
+                        <div class="service-info">
+                            <a href="#">Details</a>
+                        </div>
+                    </div>
+                    <div class="service">
+                        <i class="fa-solid fa-bullhorn"></i>
+                        <h2>Markting</h2>
+                        <div class="service-info">
+                            <a href="#">Details</a>
+                        </div>
+                    </div>
+                </div>
+            </article>
+        </section>
+
+        <!-- Skills Section -->
+        <section class="skills" id="skills" style="padding: var(--sectionPadding);">
+            <article class="container">
+                <span class="main-title">Our Skills</span>
+                <div class="skills-content">
+                    <img src="images/skills.png" alt="">
+                    <div class="all-skills">
+                        <div class="skill">
+                            <h2>HTML</h2>
+                            <div progress="80%" class="progress">
+                                <span style="width: 0;" data-width="80%"></span>
+                            </div>
+
+                        </div>
+                        <div class="skill">
+                            <h2>CSS</h2>
+                            <div progress="85%" class="progress">
+                                <span style="width: 0;" data-width="85%"></span>
+                            </div>
+                        </div>
+                        <div class="skill">
+                            <h2>JavaScript</h2>
+                            <div progress="40%" class="progress">
+                                <span style="width: 0;" data-width="40%"></span>
+                            </div>
+                        </div>
+                        <div class="skill">
+                            <h2>Responsive Design</h2>
+                            <div progress="80%" class="progress">
+                                <span style="width: 0;" data-width="80%"></span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </article>
+        </section>
+
+        <!-- How-it--works Section -->
+        <section class="how-it--works" id="how-it--works" style="padding: var(--sectionPadding); background-color: var(--subColor2);">
+            <article class="container">
+                <span class="main-title">How It Works</span>
+                <div class="work-info">
+                    <img src="images/work-steps.png" alt="">
+                    <div class="businesses">
+                        <div class="business">
+                            <img src="images/work-steps-1.png" alt="">
+                            <div class="business-info">
+                                <h2>Business Analysis</h2>
+                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim nesciunt obcaecati quisquam quis laborum recusandae debitis vel</p>
+                            </div>
+                        </div>
+                        <div class="business">
+                            <img src="images/work-steps-2.png" alt="">
+                            <div class="business-info">
+                                <h2>Architecture</h2>
+                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim nesciunt obcaecati quisquam quis laborum recusandae debitis vel</p>
+                            </div>
+                        </div>
+                        <div class="business">
+                            <img src="images/work-steps-3.png" alt="">
+                            <div class="business-info">
+                                <h2>Developement</h2>
+                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim nesciunt obcaecati quisquam quis laborum recusandae debitis vel</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </article>
+        </section>
         <script src="main.js"></script>
     </body>
 </html>
