Modified the structure file

--- a/index.html
+++ b/index.html
@@ -564,6 +564,44 @@
                 </div>
             </article>
         </section>
+
+        <!-- Events Section -->
+        <section class="events" id="events" style="padding: 80px 0;">
+            <article class="container">
+                <span class="main-title">Latest Events</span>
+                <div class="events-info">
+                    <img src="images/events.png" alt="">
+                    <div class="event">
+                        <div class="event-time">
+                            <div>
+                                <span class="days"></span>
+                                <span>Days</span>
+                            </div>
+                            <div>
+                                <span class="hours"></span>
+                                <span>Hours</span>
+                            </div>
+                            <div>
+                                <span class="minutes"></span>
+                                <span>Minutes</span>
+                            </div>
+                            <div>
+                                <span class="seconds"></span>
+                                <span>Seconds</span>
+                            </div>
+                        </div>
+                        <div class="event-info">
+                            <h2 class="birthday-hint">My birthday countdown, be ready...</h2>
+                            <p class="birthday-time">This birthday will be a special day for me, because I'll be done with my first year of learning web development, and I'm gonna have 22 years from my whole years. That is going to be a fantastic moment.</p>
+                        </div>
+                    </div>
+                </div>
+                <form class="subscribe">
+                    <input type="email" name="email" placeholder="Enter Your Email" autocomplete="off" style="caret-color: var(--mainColor2);">
+                    <input type="submit" value="Subscribe">
+                </form>
+            </article>
+        </section>
         <script src="main.js"></script>
     </body>
 </html>
